--- a/src/app/personnels/info-person/process-work/process-work.component.html
+++ b/src/app/personnels/info-person/process-work/process-work.component.html
@@ -58,7 +58,7 @@
     <div class="action-form mgb-i-10">
       <button (click)="closeModal(modal)">Thoát</button>
     </div>
-
+    <h3 class="text-center">Thông tin quá trình công tác</h3>
     <div *ngIf="message.condition && formNotValid" [ngClass]="'alert alert-'+ message.type">
       {{message.content}}
     </div>
