--- a/src/app/personnels/info-person/emulation-title/emulation-title.component.html
+++ b/src/app/personnels/info-person/emulation-title/emulation-title.component.html
@@ -51,6 +51,7 @@
     <div class="action-form mgb-i-10">
       <button (click)="closeModal(emulationTitle)">Thoát</button>
     </div>
+    <h3 class="text-center">Thông tin danh hiệu thi đua</h3>
     <div *ngIf="message.condition && formNotValid " [ngClass]="'alert alert-'+ message.type">
       {{message.content}}
     </div>
