--- a/src/app/personnels/info-person/language-teachnoly-politic/foreign-language/foreign-language.component.html
+++ b/src/app/personnels/info-person/language-teachnoly-politic/foreign-language/foreign-language.component.html
@@ -53,6 +53,7 @@
     <div class="action-form mgb-i-10">
       <button (click)="closeModal(languageModal)">Thoát</button>
     </div>
+    <h3 class="text-center">Thông tin trình độ ngoại ngữ </h3>
     <div *ngIf="message.condition && formNotValid" [ngClass]="'alert alert-'+ message.type">
       {{message.content}}
     </div>
