--- a/src/app/personnels/info-person/process-evention/process-evention.component.html
+++ b/src/app/personnels/info-person/process-evention/process-evention.component.html
@@ -54,6 +54,7 @@
     <div class="action-form mgb-i-10">
       <button (click)="closeModal(evention)">Thoát</button>
     </div>
+    <h3 class="text-center">Thông tin quá trình phát minh</h3>
     <div *ngIf="message.condition && formNotValid " [ngClass]="'alert alert-'+ message.type">
       {{message.content}}
     </div>
