--- a/src/app/personnels/info-person/process-train/train.component.css
+++ b/src/app/personnels/info-person/process-train/train.component.css
@@ -31,7 +31,7 @@ thead > tr > th:last-child {
 }
 
 textarea {
-  width: 100%;
-  max-width: 100%;
+  width: 100% !important;
+  max-width: 100% !important;
   display: block;
 }
