--- a/src/app/personnels/info-person/publish-info/publish-info.component.html
+++ b/src/app/personnels/info-person/publish-info/publish-info.component.html
@@ -50,6 +50,7 @@
     <div class="action-form mgb-i-10">
       <button (click)="closeModal(publish)">Thoát</button>
     </div>
+    <h3 class="text-center">Thông tin xuất bản</h3>
     <div *ngIf="message.condition && formNotValid " [ngClass]="'alert alert-'+ message.type">
       {{message.content}}
     </div>
