--- a/src/app/personnels/info-person/salary-brief/salary-brief.component.html
+++ b/src/app/personnels/info-person/salary-brief/salary-brief.component.html
@@ -65,6 +65,7 @@
     <div class="action-form mgb-i-10">
       <button (click)="closeModal(modalSalary)">Thoát</button>
     </div>
+    <h3 class="text-center">Thông tin lương </h3>
     <div *ngIf="message.condition && formNotValid " [ngClass]="'alert alert-'+ message.type">
       {{message.content}}
     </div>
