--- a/src/app/personnels/info-person/senimar-newpaper/senimar-newpaper.component.css
+++ b/src/app/personnels/info-person/senimar-newpaper/senimar-newpaper.component.css
@@ -1,10 +1,11 @@
 textarea {
   max-width: 100%;
   width: 100%;
+  display: inline-block;
   height: 100px;
 }
 
-input {
+input, .form-control {
   width: 100% !important;
   max-width: 100%;
 }
