--- a/src/app/personnels/info-person/senimar-newpaper/senimar-newpaper.component.html
+++ b/src/app/personnels/info-person/senimar-newpaper/senimar-newpaper.component.html
@@ -122,6 +122,7 @@
     <div class="action-form mgb-i-10">
       <button (click)="closeModal(seminaModal)">Thoát</button>
     </div>
+    <h3 class="text-center">Thông tin báo cáo khoa học   </h3>
     <div *ngIf="message.condition && mode == 0 && formSeminarNotValid " [ngClass]="'alert alert-'+ message.type">
       {{message.content}}
     </div>
@@ -203,6 +204,7 @@
     <div class="action-form mgb-i-10">
       <button (click)="closeModal(newspaperModal)">Thoát</button>
     </div>
+    <h3 class="text-center">Thông tin bài báo khoa học  </h3>
     <div *ngIf="message.condition && formNewspaperNotValid " [ngClass]="'alert alert-'+ message.type">
       {{message.content}}
     </div>
