--- a/src/app/components/headers/header-2/header-2.component.html
+++ b/src/app/components/headers/header-2/header-2.component.html
@@ -9,29 +9,31 @@
         <!--<span class="icon-bar"></span>-->
         <!--</div>-->
         <!--<div>-->
-          <div class="app-logo">
-            <a routerLink="/home">
-              <img src="../../../../assets/images/logo/logo4.png" alt="logo">
-              <span style="font-weight: 600;color: #fff;">VNUA</span>
+        <div class="app-logo">
+          <a routerLink="/home">
+            <img src="../../../../assets/images/logo/logo4.png" alt="logo">
+            <span style="font-weight: 600;color: #fff;">VNUA</span>
+          </a>
+        </div>
+        <div class="app-name">
+          {{titleName}}
+        </div>
+        <div class="right">
+          <div class="dropdown">
+            <img [src]="avatar?avatar:'http://via.placeholder.com/150x150'" class="avatar" alt=""
+                 style="width: 30px;height: 30px">
+            <a id="dropdownMenu1" data-toggle="dropdown" style="cursor: pointer; color: #fff"
+               aria-haspopup="true" aria-expanded="true">
+              {{user?user.username:''}}
+              <span class="caret"></span>
             </a>
+            <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+              <li><a style="cursor: pointer" (click)="logout()">Đăng xuất</a></li>
+              <!--<li><a href="#">Đăng xuất</a></li>-->
+            </ul>
           </div>
-          <div class="app-name">
-            {{titleName}}
-          </div>
-          <div class="right">
-            <div class="dropdown">
-              <a id="dropdownMenu1" data-toggle="dropdown" style="cursor: pointer; color: #fff"
-                 aria-haspopup="true" aria-expanded="true">
-                {{user?user.username:''}}
-                <span class="caret"></span>
-              </a>
-              <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-                <li><a style="cursor: pointer" (click)="logout()">Đăng xuất</a></li>
-                <li><a href="#">Đăng xuất</a></li>
-              </ul>
-            </div>
-          </div>
-           <div style="display: table-cell;vertical-align: middle"></div>
+        </div>
+        <div style="display: table-cell;vertical-align: middle"></div>
         <!--</div>-->
 
       </div>
