--- a/src/app/personnels/info-person/thesis-guide/thesis-guide.component.html
+++ b/src/app/personnels/info-person/thesis-guide/thesis-guide.component.html
@@ -1,6 +1,6 @@
 <div class="row form-item " style="margin-left: 0;margin-right: 0">
   <div class="form-item-title">
-    Thông tin hướn dẫn luận văn/luận án
+    Thông tin hướng dẫn luận văn/luận án
   </div>
 
   <form>
