--- a/src/app/personnels/manager-personnels/procedure-acesending-salary/procedure-acesending-salary.component.html
+++ b/src/app/personnels/manager-personnels/procedure-acesending-salary/procedure-acesending-salary.component.html
@@ -22,6 +22,10 @@
       </div>
     </div>
 
+   <div class="col-xs-12">
+     <h3 class="text-center">Làm thủ tục tăng lương</h3>
+   </div>
+
   </modal-header>
 
   <modal-body>
