--- a/src/app/personnels/manager-system/user-manager/user-manager.component.html
+++ b/src/app/personnels/manager-system/user-manager/user-manager.component.html
@@ -10,6 +10,11 @@
         <button (click)="closeModal(modal)">Thoát</button>
       </div>
     </div>
+    <div class="col-xs-12">
+      <h3 class="text-center">Phân quyền cho cán bộ </h3>
+    </div>
+
+
 
   </modal-header>
 
