--- a/src/app/personnels/manager-personnels/procedure-retire/procedure-retire.component.html
+++ b/src/app/personnels/manager-personnels/procedure-retire/procedure-retire.component.html
@@ -6,6 +6,7 @@
     <div class="action-form mgb-i-10">
       <button (click)="closeModal(modal)">Thoát</button>
     </div>
+    <h3 class="text-center">Làm thủ tục về hưu </h3>
     <div *ngIf="message.condition  " [ngClass]="'alert alert-'+ message.type">
       {{message.content}}
     </div>
