--- a/src/app/personnels/manager-system/arg-system/arg-fontend/arg-fontend.component.html
+++ b/src/app/personnels/manager-system/arg-system/arg-fontend/arg-fontend.component.html
@@ -27,7 +27,7 @@
       <td>{{item.activated}}</td>
       <td>
         <span class="action-icon" (click)="editItem(item)"><i class="fa fa-edit"></i></span>
-        <span class="action-icon" (click)="removeItem(item)"><i class="fa fa-remove "></i></span>
+        <!--<span class="action-icon" (click)="removeItem(item)"><i class="fa fa-remove "></i></span>-->
       </td>
     </tr>
 
